# dc-api-x

./: .env.test  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_CONFIG_SUMMARY.md  LICENSE  Makefile  README.md  SCRIPT_ORGANIZATION_COMPLETED.md  SECURITY.md  WORKFLOW_INSTRUCTIONS.md  conftest.py  monkeytype.sqlite3  mypy.ini  pyproject.toml  pytest.ini  run_tests.sh  setup.cfg  test_cli.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/SECURITY_ADVISORIES/: TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/profile/: README.md
.github/workflows/: advanced-lint.yml  bandit.yml  bump.yml  codacy.yml  code-coverage.yml  codeql-analysis.yml  codeql.yml  docs.yml  greetings.yml  label.yml  lint.yml  osv-scanner.yml  pmd.yml  pysa.yml  python-workflow.yml  release.yml  security-scans.yml  stale.yml  summary.yml
docs/: 00-overview.md  01-installation.md  01-overview.md  02-directory-layout.md  02-installation.md  03-architecture.md  03-project-structure.md  04-architecture.md  04-usage.md  05-plugin-system.md  05-quickstart.md  06-code-quality.md  06-roadmap.md  08-roadmap.md  09-advanced-libraries.md  10-cli-documentation.md  10-development-workflow.md  11-development-contributing.md  11-pydantic_guide.md  12-development-code-quality.md  12-development-plugin-system.md  13-development-plugin-system.md  13-typer.md  14-pytest.md  16-robot-framework.md  20-tech-overview.md  20-tech-pydantic.md  21-tech-core-libraries.md  21-tech-logfire.md  22-tech-developer-tools.md  23-tech-testing-merge.md  23-tech-testing.md  24-tech-logging-tests.md  24-tech-logging.md  24-tech-pluggy-merge.md  25-tech-advanced-libraries.md  25-tech-typing.md  26-tech-cli.md  27-tech-plugin.md  31-cli-reference.md  (+3 more)
examples/: dcapix_config_example.py  github_api_client.py  multi_protocol_client.py  pydantic_config_example.py  pydantic_settings_example.py  rest_api_client.py  sample_plugin.py  schema_extraction.py
scripts/: auto_lint_fix.sh  mk_monkeytype_runner.py  mk_update_deps.py  monkeytype_runner.py
src/dc_api_x/: __init__.py  __init__.py.bak  cli.py  client.py  config.py  constants.py  entity.py  exceptions.py  models.py  pagination.py  plugin_manager.py  schema.py
src/dc_api_x/entity/: __init__.py  base.py  examples.py  filters.py  sorters.py
src/dc_api_x/ext/: __init__.py  adapters.py  auth.py  hooks.py  providers.py
src/dc_api_x/ext/adapters/: __init__.py  async_adapters.py  cache.py  database.py  directory.py  filesystem.py  graphql.py  http.py  implementations.py  message_queue.py  protocol.py  websocket.py
src/dc_api_x/ext/auth/: __init__.py  basic.py  database.py  ldap.py  oauth.py  provider.py  token.py
src/dc_api_x/ext/hooks/: __init__.py  api_response.py  auth.py  error.py  facade.py  logfire_hook.py  logging.py  protocol.py  request.py
src/dc_api_x/ext/providers/: __init__.py  config.py  data.py  facade.py  pagination.py  protocol.py  schema.py  transform.py
src/dc_api_x/hookspecs/: __init__.py  facade.py  hooks.py  hookspecs.py  protocol.py  providers.py  specs.py
src/dc_api_x/pagination/: __init__.py  base.py  cursor.py  link.py  offset.py  page.py
src/dc_api_x/plugins/: __init__.py  base.py  registry.py
src/dc_api_x/utils/: __init__.py  adapters.py  cli.py  cli_exceptions.py  cli_helpers.py  constants.py  definitions.py  exceptions.py  formatting.py  logfire.py  logging.py  validation.py
tests/: README-LOGFIRE-TESTING.md  README.md  __init__.py  conftest.py  constants.py  factories.py  minimal_typer.py  simple_typer_test.py  test_cli_fixes.py  test_client.py  test_config.py  test_logfire_client.py  test_logfire_integration.py  test_models.py
tests/data/: jwt_keys.json  sample.xml
tests/functional/: __init__.py  test_example_functional.py
tests/integration/: __init__.py  test_example_integration.py
tests/performance/: __init__.py  test_benchmark.py
tests/security/: __init__.py  test_security.py
tests/unit/: __init__.py  test_cli.py  test_cli_helpers.py  test_config.py  test_models.py  test_validation.py
