[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dc-api-x"
version = "0.2.0"
description = "Datacosmos multi-protocol client (HTTP, DB, LDAP, …) with plug-in architecture"
authors = ["Marlon Costa <marlon.costa@datacosmos.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dc_api_x", from = "src" }]
repository = "https://github.com/datacosmos-br/dc-api-x"
documentation = "https://datacosmos-br.github.io/dc-api-x/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database",
]

# ========================================================================== #
#  Runtime dependencies (core)                                               #
# ========================================================================== #
[tool.poetry.dependencies]
python = "^3.10"
# Networking
requests = "^2.32.3"
httpx = "^0.28.1"
# Validation / settings
pydantic = {version = "^2.11.4", extras = ["email", "timezone"]}
pydantic-settings = "^2.9.1"
# logging
# rich = "^14.0.0"
# tqdm
# loguru
# sentry-sdk
structlog = "^25.3.0"
# progressbar2
#logbook
# alive-progress
# colorlog
# notifiers

# shell
# xxh

# cli
click = "^8.1.8"
# typer = { version = "^0.15.4", extras = ["all"] } # rich-help & completion
doctyper = { version = "^0.15.4", extras = ["all"] } # rich-help & completion
# Plug-ins / retries / tracing
pluggy = "^1.6.0"
# tenacity = "^9.1.2"
# opentelemetry-api = "^1.33.1"
# opentelemetry-sdk = "^1.33.1"
# Misc
python-dotenv = "^1.1.0"
responses = { version = "^0.25.7", optional = true } # used only in tests
ldap3 = "^2.9.1"
# python-ldap
pyjwt = "*"
# requests-jwtauth = "*"
# authlib = "*"
# python-jose = "*"
# jwt = "*"
# ========================================================================== #
#  Dev / CI toolchain                                                        #
# ========================================================================== #
pydantic-core = "2.33.2"
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
# pyupgrade = "3.19.1"
# autoflake = "^2.3.1"
refurb = "^2.1.0" # A tool for refurbishing and modernizing Python codebases

build = "^1.2.2"

# Linters & Style Checkers
pylint = "^3.3.7"
ruff = "^0.11.11"
# flake8
# wemake-python-styleguide
# pyflakes
# parso
# pycodestyle
# beartype
# pydocstyle
# flake8-bugbear
# pylint-django
# flake8-compreehensions
# flake8-quotes
# mypy-protobuf (🥈28 · ⭐ 630) - open source tools to generate mypy stubs from protobufs. Apache-2
# flake8-eradicate (🥈28 · ⭐ 310) - Flake8 plugin to find commented out or dead code. MIT
# hacking (🥈28 · ⭐ 240) - OpenStack Hacking Style Checks. Mirror of code maintained at.. Apache-2
# flake8-commas (🥈28 · ⭐ 130) - Flake8 extension for enforcing trailing commas in python. MIT
# flake8-isort (🥉27 · ⭐ 170) - flake8 plugin that integrates isort. ❗️GPL-2.0
# flake8-builtins (🥉27 · ⭐ 110) - Check for python builtins being used as variables or.. ❗️GPL-2.0
# nitpick (🥉26 · ⭐ 380) - Enforce the same settings on multiple projects. MIT
# check-manifest (🥉26 · ⭐ 280) - Tool to check the completeness of MANIFEST.in for Python packages. MIT
# flake8-black (🥉26 · ⭐ 160) - flake8 plugin to run black for checking Python coding style. MIT
# flake8-import-order (🥉24 · ⭐ 280 · 💤) - Flake8 plugin that checks import order against.. ❗️LGPL-3.0
# pandas-vet (🥉21 · ⭐ 160 · 💤) - A plugin for Flake8 that checks pandas code. MIT
# flake8-simplify (🥉20 · ⭐ 180) - A flake8 plugin that helps you to simplify code. MIT
# bellybutton (🥉17 · ⭐ 270 · 💤) - Custom Python linting through AST expressions. MIT
# imhotep (🥉17 · ⭐ 220 · 💤) - A static-analysis bot for Github. MIT

# Type checkers
mypy = "^1.15.0"
# pyright
# pytype
# pyre-check
# typeguard
monkeytype = "^23.3.0"  # Runtime type collection tool

# Mypy stubs
types-cryptography = "^3.3.23.2"
types-jwt = "^0.1.3"
types-requests = "^2.32.0.20250515"

# Code Formatters
black = "^25.1.0"
isort = "^6.0.1"
# yapf
# autopep8
# docformatter
# autoimport

# Code Refactory
# jedy
# rope
# pyupgrade
# vulture
# autoflake
# MonkeyType
# add-trailling-comma
# uninimport
# com2ann
# massedit

# Security
bandit = "^1.8.3"
# sqlmap
# detect-secrets
# safety

# Complexity
# propector
# mccabe
# radon
# wily
# xenon
# Logfire integration
logfire = {extras = ["testing"], version = "^3.16.0", optional = true}
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"
# pytest-xdist = "^3.6.1"
pytest-timeout = "^2.4.0"
pytest-sugar = "^1.0.0"
pytest-html = "^4.1.1"
pytest-profiling = "^1.8.1"
pytest-benchmark = "^5.1.0"
responses = "^0.25.7"
autoflake = "^2.3.1"
myst-parser = "^4.0.1"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-xdist = "^3.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
# hypothesis
# robotframework
pytest-xdist = "^3.6.1"
# playwright-python
# tox
pytest-cov = "^6.1.1"
# pyautogui
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
# mimesis
# freezegun
# pytest-bdd
# nose2
# coveralls-python
# nox
pytest-html = "^4.1.1"
# factory-boy
# asv
# pytest-testinfra
# pytest-benchmark
# pytest-randomly
# ddt
# pytest-testmon
# pytest-mypy
# mamba test runner
# pytest-docker
# pytest-datadir
# xdoctest
pytest-timeout = "^2.2.0"
pytest-sugar = "^1.0.0"
pytest-profiling = "^1.7.0"
# JWT authentication support
# pytest-jwt = "*"
# XML testing support
# pytest-xml = "*"

[tool.poetry.group.docs.dependencies]
# best of mkdocs
sphinx = "*"
# mkdocs-material
# mkdocs
sphinx-rtd-theme = "*"
# alabaster
# mkdocstrings
# breathe
sphinx-autodoc-typehints = "^3.0.0"
# griffe
# pdoc
# sphinx-autobuild
# podc3
# interrogate

myst-parser = "^4.0.0" # An extended commonmark compliant parser, with bridges to docutils/sphinx
sphinx-copybutton = "^0.5.2" # Add a "copy" button to code blocks in Sphinx
# mdformat           = "^0.7.22"     # CommonMark compliant Markdown formatter
# mdformat-gfm       = "^0.4.1"      # GitHub-flavoured tables, task lists …

# Markdown  Linter
# markdownlint JS
# johnfraney/flake8-markdown
pymarkdownlnt      = "^0.9.30"     # strict Markdown lint (configurable)
# spreemohealth/style - Code style management and enforcement


[tool.poetry.group.examples.dependencies]
pyyaml = "^6.0.2"
colorama = "^0.4.6"
tabulate = "^0.9.0"

[tool.poetry.scripts]
dcapix = "dc_api_x.cli:main"

# ========================================================================== #
#  Plugin namespace (populated by external wheels)                           #
# ========================================================================== #
[tool.poetry.plugins."dc_api_x.plugins"]
# oracle_db  = "dc_api_x_oracle_db"
# wms        = "dc_api_x_oracle_wms"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | reference
  | examples
  | .*__pydantic_schema__.py
)/
'''

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
skip_glob = ["**/reference/**", "**/examples/**", "**/.venv/**"]


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "responses.*",
    "pluggy.*",
    "typer.*",
    "rich.*",
    "structlog.*",
    "opentelemetry.*",
    "ldap3.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".venv/**",
    ".venv*/**",
    "env*/**",
    "venv*/**",
    "reference/**",
    "*/examples/**",
    "*/test_venv/**",
    "*/.mypy_cache/**",
    "*/.pytest_cache/**",
    "*/.ruff_cache/**",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "BLE", # flake8-blind-except
    "COM", # flake8-commas
    "A",   # flake8-builtins
    "ICN", # flake8-import-conventions
    "PTH", # flake8-use-pathlib
    "FLY", # flynt
    "FBT", # boolean-trap
    "S",   # flake8-bandit
]

ignore = [
    "E501",  # line too long - handled by black
    "UP007", # Union syntax (X | Y) requires Python 3.10
    "S101",  # Use of assert in tests is OK
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"] # Imported but unused, star imports
"tests/*" = [
    "S101",
    "S105",
    "S106",
    "PLR2004",
    "ARG002",
] # Use of assert, Magic values in tests, Unused arguments in tests
"src/dc_api_x/client.py" = ["ARG002"] # Unused method arguments
"src/dc_api_x/ext/hooks.py" = ["ARG002"] # Unused method arguments

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-third-party = [
    "requests",
    "httpx",
    "pydantic",
    "rich",
    "structlog",
    "pluggy",
    "typer",
    "opentelemetry",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "reference", "examples"]
skips = ["B101"]                                           # Skip assert statements in tests

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --cov=src/dc_api_x --cov-report=term --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "plugins: tests for plugin system",
]
asyncio_mode = "auto"
xvs_timeout = 300

[tool.coverage.run]
source = ["src/dc_api_x"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

# mdformat config (keeps 88-col wrap like Python code)
[tool.mdformat]
number             = true          # auto-number ordered lists
wrap               = 88

# plugins = ["pydantic.mypy"]


[tool.logfire]
pydantic_plugin_record = "all"
